--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,14 +18,18 @@
         <activity android:name=".InputDataActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".AddSimpleInfoActivity" />
-        <activity android:name=".CreateAccountActivity" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".TrainingActivity">
+        <activity android:name=".CreateAccountActivity">
+
+        </activity>
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".TrainingActivity">
+
         </activity>
     </application>
 
